deploy: ab77b89e9b4ba1c8f50c68284a2781838316197c

--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>/home/runner/work/Modern.TiddlyDev/Modern.TiddlyDev/wiki/tiddlers/$__UpgradeLibrary_List.json</li>
+
 <li>$:/DefaultTiddlers</li>
 
 <li>$:/favicon.ico</li>
@@ -183,6 +185,8 @@ Error message and password prompt
 </noscript>
 <!--~~ Ordinary tiddlers ~~-->
 <script class="tiddlywiki-tiddler-store" type="application/json">[
+
+{"title":"/home/runner/work/Modern.TiddlyDev/Modern.TiddlyDev/wiki/tiddlers/$__UpgradeLibrary_List.json","text":"","type":"application/json","revision":"0","bag":"default"},
 
 {"title":"$:/DefaultTiddlers","created":"20220426153828911","modified":"20221228055915176","type":"text/vnd.tiddlywiki","text":"[list[$:/StoryList]] $:/plugins/Modern.TiddlyDev/doc\n","revision":"0","bag":"default"},
 
