--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>Modern.TiddlyDev — Modern TiddlyWiki  plugin developing framework</title>
+<title>Modern.TiddlyDev
+ — Modern TiddlyWiki  plugin developing framework</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -220,7 +221,7 @@ Error message and password prompt
 
 {"title":"$:/SiteSubtitle","created":"20220426154059698","modified":"20221205070308575","type":"text/vnd.tiddlywiki","text":"\u003C$list filter=\"[[$:/language]get[text]removeprefix[$:/languages/]else[en-GB]]\" variable=\"lang\">\u003C$list filter=\"[\u003Clang>search[zh]]\">现代太微插件开发框架\u003C/$list>\u003C$list filter=\"[\u003Clang>!search[zh]]\">Modern ~TiddlyWiki  plugin developing framework\u003C/$list>\u003C/$list>","revision":"0","bag":"default"},
 
-{"title":"$:/SiteTitle","created":"20220426153918791","modified":"20221205121451451","type":"text/vnd.tiddlywiki","text":"\u003C$text text=\"Modern.TiddlyDev\" />","revision":"0","bag":"default"},
+{"title":"$:/SiteTitle","type":"text/vnd.tiddlywiki","text":"\u003C$text text=\"Modern.TiddlyDev\" />\n","revision":"0","bag":"default"},
 
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no","revision":"0","bag":"default"},
 
